# ntut

./: .coverage  .gitignore.txt  test.py
C/homework/: homework001.c  homework002.c  homework003.c  homework004.c  homework005-efficiency.c  homework005.c  homework006.c  homework007.c  homework008.c  homework009.c  homework010.c  homework011.c  homework012.c  homework013.c  homework014.c  homework015.c  homework016.c  homework017.c  homework018.c  homework019.c  homework020.c  homework021-struct-version.c  homework021.c  homework022.c  homework023.c  homework024.c  homework025.c  homework026.c  homework027.c  homework028.c  homework029.c  homework030.c  tempCodeRunnerFile.c
C/test/: CMakeLists.txt  homework008.c  homework008.h  test.c  test_homework008.cpp
C/上機考/: DF-expression.c  test.c  分數運算.c  整數大數除法.c  有限狀態機.c  直線方程式.c  迴圈列印圖形.c  迷宮.c  長浮點數大數運算.c  骰子遊戲.c
LaTeX/hw01/: hw01.aux  hw01.fdb_latexmk  hw01.fls  hw01.out  hw01.tex  hw01.xdv
LaTeX/hw02/: hw02.aux  hw02.fdb_latexmk  hw02.fls  hw02.out  hw02.tex  hw02.xdv
LaTeX/hw03/: hw03.aux  hw03.fdb_latexmk  hw03.fls  hw03.out  hw03.tex  hw03.xdv
LaTeX/hw04/: hw04.aux  hw04.fdb_latexmk  hw04.fls  hw04.out  hw04.tex  hw04.xdv
LaTeX/hw05/: hw05.aux  hw05.fdb_latexmk  hw05.fls  hw05.out  hw05.tex  hw05.xdv
LaTeX/hw06/: hw06.aux  hw06.fdb_latexmk  hw06.fls  hw06.out  hw06.tex  hw06.xdv
LaTeX/hw08/: hw08.aux  hw08.fdb_latexmk  hw08.fls  hw08.out  hw08.tex  hw08.xdv
Python/: test.py  zerojudge.py
test/: .coverage  exec_api.py  mybmi.py  mybmitest.py
上機考/: 不含 朝狀 list 矩陣翻轉.py  保齡球.py  十點半.py  梭哈.py  衝堂.py
(+89 files in other folders)
